[tool.poetry]
name = "mbl"
version = "0.2.1"
description = "Many-body localization"
authors = ["taolin <tanlin2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tqdm = "^4.63.0"
PyYAML = "^6.0"
numpy = ">=1.18, <1.23"
pandas = "1.4.2"
pandera = "0.11.0"
awswrangler = "2.15.1"
tnpy = "0.1.1a3"
apache-airflow = { version = "2.3.2", optional = true }
mlflow = { version = "1.26.1", optional = true }
protobuf = { version = "3.20.1", optional = true }
ray = { extras = ["default", "tune"], version = "1.12.1", optional = true }
#tensorboard = { version= "2.9.1", optional = true }
dask = { version = "2022.6.0", optional = true }
dask-jobqueue = { version = "0.7.3", optional = true }
modin = { extras = ["ray"], version = "0.15.0", optional = true}
streamlit = { version = "1.10.0", optional = true }
orjson = { version = "3.7.2", optional = true }
plotly = { version = "5.8.2", optional = true }
pandas-profiling = { version = "3.1.0", optional = true }

[tool.poetry.extras]
mlops = ["mlflow"]
distributed = ["ray", "modin"]
dashboard = ["streamlit", "orjson", "plotly", "pandas-profiling"]
experimental = ["apache-airflow", "tensorboard", "dask", "dask-jobqueue"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pylint = "^2.13.7"
jupyter = "^1.0.0"
moto = "^3.1.12"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
