[tool.poetry]
name = "mbl"
version = "0.2.1"
description = "Many-body localization"
authors = ["Tan Tao-Lin <tanlin2013@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.15,<3.11"
tqdm = "^4.63.0"
numpy = "^1.22"
pandas = "^1.5.0"
pandera = "^0.13.4"
awswrangler = "^2.20.0"
tnpy = "0.1.1a3"
mlflow = "^2.1.1"
ray = { extras = ["default", "tune"], version = "^2.0.0" }
modin = { extras = ["ray"], version = "^0.17.0" }
streamlit = { version = "^1.19.0", optional = true }
orjson = { version = "^3.8.7", optional = true }
plotly = { version = "^5.13.1", optional = true }
pandas-profiling = { version = "^3.6.6", optional = true }

[tool.poetry.extras]
dashboard = ["streamlit", "orjson", "plotly", "pandas-profiling"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
commitizen = "^2.35.0"
vulture = "^2.4"
bandit = "^1.7.4"
safety = "^2.3.4"
isort = "^5.11.0"
flake8-bugbear = "^23.1.14"
Flake8-pyproject = "^1.2.2"
black = "^23.1.0"
mypy = "^1.0.0"
ipython = "^8.5.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
pep8-naming = "^0.13.0"
cruft = "^2.12.0"
moto = "^3.1.12"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
nbsphinx = "^0.8.8"
m2r2 = "^0.3.2"
pandoc = "^2.3"
#portray = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
count = true
max-line-length = 100
ignore = [
    "E203",
    "W503"
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
plugins = ["numpy.typing.mypy_plugin"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["*tests*"]

[tool.bandit]
skips = ["B101"]

[tool.cruft]
skip = []
